#pragma once

namespace Lada {
    class IAsset {
    public:
        ~IAsset() = default;
    };
}
